# Phys

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  format_code.py
examples/simple/: CMakeLists.txt  main.cpp
include/phys/: default_config.h  phys.h
include/phys/collision/: collision.h  collision_cache.h  collision_object.h  collision_world.h  shape.h
include/phys/collision/broadphase/: axis_sweep.h  pair_cache.h
include/phys/collision/broadphase/impl/: axis_sweep_impl.h
include/phys/collision/narrowphase/: narrowphase.h
include/phys/collision/narrowphase/algorithms/: box_box.h  convex_convex.h  convex_plane.h  sphere_sphere.h
include/phys/collision/shapes/: axis_aligned_plane.h  box.h  convex.h  sphere.h
include/phys/dynamics/: body.h  dynamic_body.h  dynamics_world.h  simulation_island_manager.h  static_body.h
include/phys/dynamics/impl/: dynamics_world_impl.h
include/phys/dynamics/solver/sequential_impulse/: body.h  config.h  contact_constraint.h  solver.h
include/phys/math_types/: aabb.h  transform.h
include/phys/math_types/impl/: aabb_impl.h  transform_impl.h
include/phys/util_types/: array_view.h  static_vector.h
include/phys/util_types/impl/: array_view_impl.h  static_vector_impl.h
tests/: CMakeLists.txt
tests/collision/: CMakeLists.txt  test_axis_sweep.cpp
